--- a/SwiftParser.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/SwiftParser.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>SwiftParser.xcscheme</key>
+    <key>SwiftParser-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
